generator client {
    provider = "prisma-client-js"
}

generator typescriptInterfaces {
    provider = "prisma-generator-typescript-interfaces"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

datasource db {
    provider = "mysql"
    url      = env("DATABASE_URL")
}

model User {
    id              String            @id @default(cuid())
    email           String            @unique
    username        String            @unique
    password        String
    active          Boolean           @default(true)
    lastSeen        DateTime?
    avatar          String?
    createdAt       DateTime          @default(now())
    updatedAt       DateTime          @updatedAt
    Session         Session[]
    PasswordForgot  PasswordForgot?
    UserSettings    UserSettings[]
    ChatParticipant ChatParticipant[]
}

model UserSettings {
    id           String   @id @default(cuid())
    User         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId       String
    showLastSeen Boolean  @default(true)
    showOnline   Boolean  @default(true)
    createdAt    DateTime @default(now())
    updatedAt    DateTime @updatedAt
}

model Session {
    id                 String   @id @default(cuid())
    User               User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId             String
    token              String
    tokenExpire        DateTime
    refreshToken       String
    refreshTokenExpire DateTime
    createdAt          DateTime @default(now())
    updatedAt          DateTime @updatedAt
}

model PasswordForgot {
    id         String   @id @default(cuid())
    User       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId     String   @unique
    validUntil DateTime
    createdAt  DateTime @default(now())
    updatedAt  DateTime @updatedAt
}

model Chat {
    id              String            @id @default(cuid())
    active          Boolean           @default(true)
    avatar          String?
    name            String?
    createdAt       DateTime          @default(now())
    updatedAt       DateTime          @updatedAt
    ChatParticipant ChatParticipant[]
    Message         Message[]
}

model ChatParticipant {
    id          String        @id @default(cuid())
    User        User          @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId      String
    Chat        Chat          @relation(fields: [chatId], references: [id], onDelete: Cascade)
    chatId      String
    creator     Boolean       @default(false)
    admin       Boolean       @default(false)
    createdAt   DateTime      @default(now())
    updatedAt   DateTime      @updatedAt
    Message     Message[]
    MessageSeen MessageSeen[]
}

model Message {
    id                String          @id @default(cuid())
    Chat              Chat            @relation(fields: [chatId], references: [id], onDelete: Cascade)
    chatId            String
    ChatParticipant   ChatParticipant @relation(fields: [chatParticipantId], references: [id], onDelete: Cascade)
    chatParticipantId String
    content           String
    edited            Boolean         @default(false)
    image             String?
    createdAt         DateTime        @default(now())
    updatedAt         DateTime        @updatedAt
    MessageSeen       MessageSeen[]
}

model MessageSeen {
    id                String          @id @default(cuid())
    ChatParticipant   ChatParticipant @relation(fields: [chatParticipantId], references: [id], onDelete: Cascade)
    chatParticipantId String
    Message           Message         @relation(fields: [messageId], references: [id], onDelete: Cascade)
    messageId         String
    timestamp         DateTime        @default(now())
}

model Test {
    id String @id @default(cuid())
}
